# tic-tac-toe

./: .env.dev  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  enums.py  models.py
app/auth/: routes.py
app/auth/static/css/: auth.css  login.css
app/auth/templates/: login.html  signup.html
app/game/: events.py  game_engine.py  game_logic.py  games_server.py  routes.py  socket_manager.py
app/game/static/css/: board.css  game.css
app/game/static/js/: game-multiplayer.js  game.js  multiplayer.js  singleplayer.js
app/game/templates/: game.html
app/home/: routes.py
app/home/static/css/: home.css
app/home/templates/: home.html
app/profile/: functions.py  routes.py
app/profile/static/css/: profile.css
app/profile/static/js/: profile.js
app/profile/templates/: profile.html
app/static/css/: base.css
app/templates/: base.html
